# elemmy

./: .gitignore  build.sh  io.github.xchan14.elemmy.yml  meson.build  uninstall.sh
.github/workflows/: main.yml
data/: elemmy.desktop.in  elemmy.metainfo.xml
po/: POTFILES  de.po  es.po  io.github.xchan14.elemmy.pot
src/: App.vala
